--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
      "reddit": {
-         "username": "UrisNFT",
-         "password": "Nft@1213",
+         "username": "yourusername",
+         "password": "yourpassword",
          "client": {
              "id": "8LV9ibaGS42_ExSrYzHyqg",
              "secret": "ZtkArc0WwKNfNYfbvpBn2RcyWxzb8w"
